# ccl-hs

./: .gitignore  CHANGELOG.md  ccl-hs.cabal
app/: Main.hs
src/: CCL.hs
