cabal-version:      3.0
name:               ccl-hs
version:            0.1.0.0
synopsis:           CCL implementation in haskell
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             LitFill
maintainer:         marrazzy54@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  CCL
    -- other-modules:
    -- other-extensions:
    build-depends:
        , base ^>=4.20.0.0
        , megaparsec
        , text
        , containers
    hs-source-dirs:   src
    default-language: GHC2024

executable ccl-hs
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.0.0,
        ccl-hs

    hs-source-dirs:   app
    default-language: GHC2024
